--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -1,9 +1,18 @@
-<html>
+{% load static %}
+
+<!doctype html>
+<html lang="en">
 <head>
-    <link rel="stylesheet" href="">
-    <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="{% static 'blog/css/header.css' %}">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link href="" rel="stylesheet">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <style>
+        .bg-main-pic{
+    background-image: url("{% static("blog/img/Sanstitre.png") %}");
+    }
+    </style>
 
 {#    {{-- balise - title   https://efficaceweb.fr/articles/balises-html-pour-le-referencement-google-comment-les-utiliser/   --}}#}
     <title>title - Perriolat</title>
@@ -14,28 +23,25 @@
     <meta name = « robots » content = « noindex, nofollow »>
 </head>
 <body>
-<nav class="sticky grid-rows-1">
-    <div class="">
+<header class="row">
+    <div class="col-6">
         <span>Perriolat</span>
     </div>
-    <ul class=" flex flex-row justify-evenly">
-        <li><a>section 1</a></li>
-        <li><a>section 2</a></li>
-        <li><a>section 3</a></li>
-        <li><a>section 4</a></li>
-    </ul>
-</nav>
-
-
-<header>
-    <div>
-        <span>Perriolat</span>
-    </div>
+    <nav class="col-6">
+        <ul class="d-flex justify-content-evenly">
+            <li><a>section 1</a></li>
+            <li><a>section 2</a></li>
+            <li><a>section 3</a></li>
+            <li><a>section 4</a></li>
+        </ul>
+    </nav>
 </header>
+<div class="container-fluid bg-main-pic">
+    <span>Perriolat</span>
+</div>
 
 
-
-
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 
 </html>
