page home 2 add css

--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -10,7 +10,7 @@
 
     <style>
         .bg-main-pic{
-    background-image: url("{% static("blog/img/Sanstitre.png") %}");
+    background-image: url('/static/blog/img/sanstitre.png');
     }
     </style>
 
